# cremniy

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  README_ru.md  build.ninja  cmake_install.cmake  filetab.cpp  filetab.h  flake.nix  main.cpp  mainwindow.cpp  mainwindow.ui  result  untitled1
.github/workflows/: release.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
codeeditor/: CMakeLists.txt  cmake_install.cmake  qcodeeditor_resources.qrc
codeeditor/codeeditor_autogen/: deps  mocs_compilation.cpp
codeeditor/codeeditor_autogen/EGDWYGFDBT/: moc_QCXXHighlighter.cpp.d  moc_QCodeEditor.cpp.d  moc_QFramedTextAttribute.cpp.d  moc_QGLSLCompleter.cpp.d  moc_QGLSLHighlighter.cpp.d  moc_QJSONHighlighter.cpp.d  moc_QLanguage.cpp.d  moc_QLineNumberArea.cpp.d  moc_QLuaCompleter.cpp.d  moc_QLuaHighlighter.cpp.d  moc_QPythonCompleter.cpp.d  moc_QPythonHighlighter.cpp.d  moc_QSyntaxStyle.cpp.d  moc_QXMLHighlighter.cpp.d
src/components/hexview/include/QHexView/: qhexview.h
untitled1_autogen/: deps  mocs_compilation.cpp
untitled1_autogen/EWIEGA46WW/: moc_codeeditor.cpp.d  moc_filecreatedialog.cpp.d  moc_filetab.cpp.d  moc_filetreeview.cpp.d  moc_mainwindow.cpp.d
